fixed ingredientcommand.java